--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.application.name=jwt-validator
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
