--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,11 @@ services:
     volumes:
       - './prometheus.yml:/etc/prometheus/prometheus.yml'
 
+  grafana:
+    image: 'grafana/grafana:6.5.0'
+    ports:
+      - '3000:3000'
+    environment:
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
