--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=jwt-validator
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.metrics.export.prometheus.enabled=true
+management.tracing.sampling.probability: 1.0
