--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=jwt-validator
+
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.metrics.export.prometheus.enabled=true
-management.tracing.sampling.probability: 1.0
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+
+logging.pattern.level=%5p [${spring.zipkin.service.name:${spring.application.name:}},%X{traceId:-},%X{spanId:-}]
