--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,8 @@ management.endpoint.metrics.enabled=true
 management.metrics.export.prometheus.enabled=true
 management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
+
 logging.pattern.level=%5p [${spring.zipkin.service.name:${spring.application.name:}},%X{traceId:-},%X{spanId:-}]
